src/objects/EMP_Training__c.object
<CustomObject>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMP_Training__c</fullName>
        <label>EMP Training</label>
        <referenceTo>EMP_Consultant__c</referenceTo>
        <relationshipLabel>EMP Trainings</relationshipLabel>
        <relationshipName>EMP_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Trainings</relationshipLabel>
        <relationshipName>EMP_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <label>Training Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_district__c</fullName>
        <label>Training district</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_municipality__c</fullName>
        <label>Training municipality</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_region__c</fullName>
        <label>Training region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rubroProductivo__c</fullName>
        <label>rubroProductivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>EMP Training</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>